Release 0.4.0 Changes: * Remove JVM options deprecated by JVM 8 * Fix test suite to work (missing import and enablePlugins) * Make ProjectPlugin be based on a ProjectPluginTrait so it can be used in other packages * Change autoplugins and pluginSettings from "val" to "def" so they can be more easily overridden * Upgrade to specs 3.6.6 * Convert IntelliJ files in .idea to IJ 15 format